fix: update packages and specify core-js version for babel

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -4,7 +4,8 @@
       "@babel/preset-env",
       {
         "targets": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
-        "useBuiltIns": "usage"
+        "useBuiltIns": "usage",
+        "corejs": 3
       }
     ],
     "@babel/preset-typescript",
