--- a/client/package.json
+++ b/client/package.json
@@ -17,15 +17,15 @@
     "lang:compile": "lingui compile"
   },
   "dependencies": {
-    "@babel/polyfill": "7.4.0",
+    "@babel/polyfill": "7.4.3",
     "@lingui/react": "2.7.4",
-    "@material-ui/core": "3.7.1",
-    "@material-ui/icons": "3.0.1",
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
     "@sentry/browser": "4.6.6",
     "@types/lingui__core": "2.7.0",
     "@types/lingui__macro": "2.7.3",
     "@types/lingui__react": "2.5.2",
-    "@types/react": "16.8.10",
+    "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
     "@types/react-redux": "7.0.6",
     "@types/react-router-dom": "4.3.1",
@@ -34,6 +34,7 @@
     "@types/styled-components": "4.1.12",
     "axios": "0.18.0",
     "connected-react-router": "6.3.2",
+    "core-js": "3.0.0",
     "history": "4.9.0",
     "query-string": "6.4.2",
     "react": "16.8.6",
@@ -48,12 +49,12 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.4.0",
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
     "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.4.2",
+    "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
     "@lingui/cli": "2.7.4",
@@ -61,8 +62,8 @@
     "@lingui/macro": "2.7.4",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.0",
-    "@typescript-eslint/eslint-plugin": "1.5.0",
-    "@typescript-eslint/parser": "1.5.0",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
@@ -80,14 +81,14 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-node": "8.0.1",
     "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-promise": "4.1.1",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-standard": "4.0.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.7.0",
+    "jest": "24.7.1",
     "jest-dom": "3.1.3",
     "mini-css-extract-plugin": "0.5.0",
     "pg-promise": "8.6.3",
@@ -95,13 +96,12 @@
     "react-testing-library": "6.0.4",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
-    "ts-jest": "24.0.1",
     "typescript": "3.4.1",
     "webpack": "4.29.6",
     "webpack-bundle-analyzer": "3.1.0",
-    "webpack-cli": "3.2.3",
+    "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
     "webpack-pwa-manifest": "4.0.0",
-    "workbox-webpack-plugin": "4.1.1"
+    "workbox-webpack-plugin": "4.2.0"
   }
 }
