--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -127,42 +127,7 @@ services:
       S3_URL: http://server-template-storage:9000/
       S3_REGION: milkyway
       S3_BUCKET: bucket
-      S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
-
-  # server-template-worker:
-  #   container_name: server-template-worker
-  #   build:
-  #     context: ./worker
-  #     dockerfile: ${dockerfile}
-  #   restart: unless-stopped
-  #   networks:
-  #     - default
-  #   ports:
-  #     - "8080"
-  #   volumes:
-  #     - "./worker:/service:delegated"
-  #     - "./shared:/service/shared:delegated"
-  #     - "/service/node_modules"
-  #     # NOTE: for flow
-  #     # - "/service/flow-typed/npm"
-  #   environment:
-  #     COMMON_DEBUG: 'true'
-  #     COMMON_PROJECT: server-template
-  #     COMMON_COMPANY: companyname
-  #     COMMON_ENV: local
-  #     DEBUG: 'false'
-  #     API_BINDADDR: 0.0.0.0
-  #     API_PORT: 8080
-  #     DATABASE_HOST: server-template-database
-  #     DATABASE_NAME: server_template_local
-  #     DATABASE_USER: server_template_local_app
-  #     DATABASE_PASSWORD: secret
-  #     DATABASE_POOL_MAX: '10'
-  #     S3_URL: http://server-template-storage:9000/
-  #     S3_REGION: milkyway
-  #     S3_BUCKET: bucket
-  #     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
-  #     S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+      S3_KEY_ID: minio
 
   server-template-www:
     container_name: server-template-www
@@ -181,14 +146,14 @@ services:
       # FOR GATSBY ONLY:
       # - "/service/site/node_modules"
 
-  # server-template-cache:
-  #   container_name: server-template-cache
-  #   image: redis:5.0-alpine
-  #   restart: unless-stopped
-  #   networks:
-  #     - default
-  #   ports:
-  #     - "6379"
+  server-template-cache:
+    container_name: server-template-cache
+    image: redis:5.0-alpine
+    restart: unless-stopped
+    networks:
+      - default
+    ports:
+      - "6379"
 
   # "EXTERNAL RESOURCES"
 
@@ -223,8 +188,9 @@ services:
     secrets:
       - S3_KEY_SECRET
     environment:
-      MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
-      MINIO_SECRET_KEY_FILE: /run/secrets/S3_KEY_SECRET
+      MINIO_ACCESS_KEY: minio
+      # MINIO requires key as environment variable?
+      MINIO_SECRET_KEY: secret1234
 
 secrets:
   DATABASE_PASSWORD:
