--- a/server/package.json
+++ b/server/package.json
@@ -1,55 +1,68 @@
 {
-  "name": "server-template-server",
-  "main": "index.js",
+  "name": "ekorent-carsharing-server",
+  "private": true,
   "scripts": {
-    "types-install": "if [ -f .flowconfig ]; then flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
-    "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
-    "pretty-quick": "pretty-quick",
-    "lint": "eslint . --ignore-path .eslintignore --quiet",
-    "unit": "mocha --require @babel/register --recursive 'src/**/*.unit.js'",
-    "test": "mocha --require @babel/register --recursive \"src/**/${test_name:-*}.test.js\" \"test/**/${test_name:-*}.test.js\"",
+    "test": "mocha -r ts-node/register --timeout 20000 test/**/*.ts",
+    "unit": "echo TODO",
     "start": "npm run start:dev",
-    "start:dev": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan -l debug",
-    "start:dev:trace": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan",
-    "start:prod": "NODE_ENV=production nodemon -L ./index.production.js",
-    "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules ."
+    "start:dev": "NODE_ENV=development ts-node-dev --respawn --transpileOnly index.ts | bunyan -l debug",
+    "start:worker": "npm run start:worker:dev",
+    "start:worker:dev": "NODE_ENV=development ts-node-dev --respawn --transpileOnly index.worker.ts | bunyan -l debug",
+    "lint": "tslint -p . -c tslint.json",
+    "build:test": "tsc --build tsconfig.test.json",
+    "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
+    "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@babel/runtime": "^7.2.0",
+    "@sentry/node": "^4.6.6",
     "boom": "^7.3.0",
-    "bunyan": "~1.8.12",
-    "continuation-local-storage": "~3.2.1",
-    "koa": "^2.6.2",
-    "koa-bodyparser": "~4.2.1",
-    "koa-cache-control": "~2.0.0",
-    "koa-router": "^7.4.0",
-    "lodash": "~4.17.10",
-    "pg-promise": "^8.5.4",
-    "raven": "~2.6.4",
-    "request": "~2.88.0",
-    "request-promise-native": "~1.0.5",
-    "uuid": "~3.3.2"
+    "bunyan": "^1.8.12",
+    "koa": "^2.7.0",
+    "koa-basic-auth": "^4.0.0",
+    "koa-joi-router": "^5.3.0",
+    "koa-qs": "^2.0.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
+    "mustache": "^3.0.1",
+    "pg-promise": "^8.6.4",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
+    "showdown": "^1.9.0",
+    "stack-trace": "0.0.10",
+    "unescape": "^1.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "^10.0.1",
+    "@types/boom": "^7.2.1",
+    "@types/bunyan": "^1.8.6",
+    "@types/chai": "^4.1.7",
+    "@types/cheerio": "^0.22.11",
+    "@types/co-body": "0.0.3",
+    "@types/joi": "^14.3.2",
+    "@types/koa": "^2.0.48",
+    "@types/koa-basic-auth": "^2.0.3",
+    "@types/koa-qs": "^2.0.0",
+    "@types/koa-router": "^7.0.40",
+    "@types/lodash": "^4.14.123",
+    "@types/mocha": "^5.2.6",
+    "@types/moment-timezone": "^0.5.12",
+    "@types/mustache": "^0.8.32",
+    "@types/node": "^10.14.4",
+    "@types/pg": "^7.4.14",
+    "@types/request": "^2.48.1",
+    "@types/request-promise": "^4.1.42",
+    "@types/showdown": "^1.9.2",
+    "@types/uuid": "^3.4.4",
     "chai": "^4.2.0",
-    "chai-as-promised": "~7.1.1",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb-base": "~13.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-import": "~2.14.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "cheerio": "^1.0.0-rc.3",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.15.3",
-    "pretty-quick": "^1.6.0"
-  },
-  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow"
+    "prettier": "^1.16.4",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "tslint": "^5.15.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-no-unused-expression-chai": "^0.1.4",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^3.4.2"
+  }
 }
