fix: remove ekorent from server template

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ekorent-carsharing-server",
+  "name": "server-template-server",
   "private": true,
   "scripts": {
     "test": "mocha -r ts-node/register --timeout 20000 test/**/*.ts",
