--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -19,8 +19,8 @@ RUN npm run build:prod
 FROM node:10-alpine
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
-      company=ekorent \
-      project=ekorent-carsharing \
+      company=companyname \
+      project=server-template \
       role=client
 ENV BUILD_VERSION ${BUILD_VERSION}
 ENV NODE_ENV production
