--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "install-ci": "echo '# No additional dependencies need to be installed in ci mode'",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
     "install-all": "npm-run-all install-all:admin install-all:client install-all:graphql install-all:server install-all:worker install-all:www ",
-    "install-all:admin": "cd admin && npm install && npm run types-install",
+    "install-all:admin": "cd admin && npm install",
     "install-all:client": "cd client && npm install",
-    "install-all:graphql": "cd graphql && npm install && npm run types-install",
-    "install-all:server": "cd server && npm install && npm run types-install",
-    "install-all:worker": "cd worker && npm install && npm run types-install",
-    "install-all:www": "cd www && npm install && npm run types-install",
+    "install-all:graphql": "cd graphql && npm install",
+    "install-all:server": "cd server && npm install",
+    "install-all:worker": "cd worker && npm install",
+    "install-all:www": "cd www && npm install",
     "taito-init": "taito -z init:${taito_env} && npm run import-db-data",
     "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data",
     "taito-init:local:clean": "npm run taito-init:clean && npm run clean:storage",
@@ -69,8 +69,6 @@
     "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
     "precommit:branch": "if git-branch-is -q test || git-branch-is -q stag || git-branch-is -q master; then echo 'ERROR: You cannot commit changes directly to this environment branch. Only fast-forward merge is allowed.' && echo && exit 1; fi",
     "precommit:lint": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
-    "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
-    "disabled-types": "echo flow/typescript check disabled on prepush",
     "release-pre:prod": "semantic-release --dry-run",
     "release-post:prod": "semantic-release --no-ci"
   },
@@ -78,7 +76,7 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "if [[ $taito_mode != 'ci' ]]; then npm run precommit:branch && npm run precommit:lint; fi",
-      "pre-push": "if [[ $taito_mode != 'ci' ]]; then npm-run-all --parallel lint disabled-types unit; fi"
+      "pre-push": "if [[ $taito_mode != 'ci' ]]; then npm-run-all --parallel lint unit; fi"
     }
   },
   "commitlint": {
