--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -9,6 +9,5 @@ COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/.flowconfi* \
      /service/
 RUN npm install --loglevel warn
-RUN npm run types-install
 EXPOSE 8080
-CMD npm install; npm run types-install; npm run start
+CMD npm install; npm run start
