feat: add some example tests

--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,10 @@
   "name": "server-template-server",
   "private": true,
   "scripts": {
-    "test": "mocha -r ts-node/register --timeout 20000 test/**/*.ts",
-    "unit": "echo TODO",
+    "test": "mocha -r ts-node/register --timeout 2000 test/**/*.ts",
+    "unit": "mocha -r ts-node/register --recursive 'src/**/*.unit.ts'",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development ts-node-dev --respawn --transpileOnly index.ts | bunyan -l debug",
-    "start:worker": "npm run start:worker:dev",
-    "start:worker:dev": "NODE_ENV=development ts-node-dev --respawn --transpileOnly index.worker.ts | bunyan -l debug",
     "lint": "tslint -p . -c tslint.json",
     "build:test": "tsc --build tsconfig.test.json",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
