--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "server-template-server",
   "private": true,
   "scripts": {
-    "test": "mocha -r ts-node/register --timeout 2000 test/**/*.ts",
-    "unit": "mocha -r ts-node/register --recursive 'src/**/*.unit.ts'",
+    "unit": "sh -c 'test_name=$(printf '%s' \"$0\" | sed -e 's/^sh$//g') && mocha -r ts-node/register --recursive \"**/${test_name:-*}.unit.ts\"'",
+    "test": "mocha -r ts-node/register --timeout 2000 --recursive \"**/${test_name:-*}.test.ts\"",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development ts-node-dev --respawn --transpileOnly index.ts | bunyan -l debug",
     "lint": "tslint -p . -c tslint.json",
