fix: taito check code

--- a/package.json
+++ b/package.json
@@ -42,15 +42,7 @@
     "taito-host-cypress": "npm run taito-host-cypress:client",
     "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
     "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
-    "taito-host-check-code": "TARGET_DIR=. npm run codeclimate-analyze",
-    "taito-host-check-code:admin": "TARGET_DIR=admin npm run codeclimate-analyze",
-    "taito-host-check-code:client": "TARGET_DIR=client npm run codeclimate-analyze",
-    "taito-host-check-code:graphql": "TARGET_DIR=graphql npm run codeclimate-analyze",
-    "taito-host-check-code:server": "TARGET_DIR=server npm run codeclimate-analyze",
-    "taito-host-check-code:worker": "TARGET_DIR=worker npm run codeclimate-analyze",
-    "taito-host-check-code:www": "TARGET_DIR=www npm run codeclimate-analyze",
-    "codeclimate-analyze": "npm run codeclimate engines:install && npm run codeclimate analyze",
-    "codeclimate": "cd ${TARGET_DIR} && docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume ./tmp/codeclimate/${TARGET_DIR}:/tmp/cc codeclimate/codeclimate",
+    "taito-host-check-code": "docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate engines:install && docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze",
     "_check-deps_comment": "TODO how to pass -u argument from check-deps to check-deps:TARGET?",
     "check-deps": "npm-run-all \"check-deps:root {@}\" \"check-deps:admin {@}\" \"check-deps:client {@}\" \"check-deps:graphql {@}\" \"check-deps:server {@}\" \"check-deps:worker {@}\" \"check-deps:www {@}\" -- ",
     "check-deps:root": "npm run _check-deps-script -- . ",
