feat: taito_random_name, taito_monitoring_targets

--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -134,7 +134,7 @@ full-stack:
         DATABASE_POOL_MAX: '10'
         S3_URL: http://${taito_project}-${taito_env}-storage:9000/
         S3_REGION: ${taito_provider_region}
-        S3_BUCKET: ${taito_project}-${taito_env}
+        S3_BUCKET: ${taito_random_name}-${taito_env}
         S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
       # cron jobs that re-use the same Docker image and settings as server
       # cronJobs:
