--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,7 @@ substitutions:
   _REPO_NAME: server-template
   _IMAGE_REGISTRY: eu.gcr.io/$PROJECT_ID
   _TEMPLATE_DEFAULT_TAITO_IMAGE:
+  _TEMPLATE_DEFAULT_ENVIRONMENTS:
   _TEMPLATE_DEFAULT_ORGANIZATION:
   _TEMPLATE_DEFAULT_ORGANIZATION_ABBR:
   _TEMPLATE_DEFAULT_GIT_ORGANIZATION:
@@ -55,6 +56,7 @@ steps:
   - '-c'
   - |
     export template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    export template_default_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     export template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     export template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     export template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -111,6 +113,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -139,6 +142,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -167,6 +171,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -197,6 +202,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -225,6 +231,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -253,6 +260,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -281,6 +289,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -309,6 +318,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -337,6 +347,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -365,6 +376,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -393,6 +405,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -421,6 +434,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -449,6 +463,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -477,6 +492,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -506,6 +522,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -533,6 +550,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -562,6 +580,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -590,6 +609,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -617,6 +637,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -646,6 +667,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
@@ -673,6 +695,7 @@ steps:
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+    - template_default_taito_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
     - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_git_organization=${_TEMPLATE_DEFAULT_GIT_ORGANIZATION}
