--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,8 @@
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
     "redux-saga": "1.0.2",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "workbox-window": "4.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -61,9 +62,9 @@
     "@lingui/loader": "2.7.4",
     "@lingui/macro": "2.7.4",
     "@types/jest": "24.0.11",
-    "@types/node": "11.13.0",
-    "@typescript-eslint/eslint-plugin": "1.6.0",
-    "@typescript-eslint/parser": "1.6.0",
+    "@types/node": "11.13.7",
+    "@typescript-eslint/eslint-plugin": "1.7.0",
+    "@typescript-eslint/parser": "1.7.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
@@ -78,7 +79,7 @@
     "eslint-config-prettier": "4.1.0",
     "eslint-config-standard": "12.0.0",
     "eslint-loader": "2.1.2",
-    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-import": "2.17.2",
     "eslint-plugin-node": "8.0.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": "4.1.1",
@@ -86,22 +87,22 @@
     "eslint-plugin-standard": "4.0.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "3.0.1",
-    "fork-ts-checker-webpack-plugin": "1.0.1",
+    "fork-ts-checker-webpack-plugin": "1.2.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "24.7.1",
     "jest-dom": "3.1.3",
-    "mini-css-extract-plugin": "0.5.0",
+    "mini-css-extract-plugin": "0.6.0",
     "pg-promise": "8.6.3",
-    "prettier": "1.16.4",
-    "react-testing-library": "6.0.4",
+    "prettier": "1.17.0",
+    "react-testing-library": "6.1.2",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
-    "typescript": "3.4.1",
-    "webpack": "4.29.6",
-    "webpack-bundle-analyzer": "3.1.0",
+    "typescript": "3.4.4",
+    "webpack": "4.30.0",
+    "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1",
+    "webpack-dev-server": "3.3.1",
     "webpack-pwa-manifest": "4.0.0",
-    "workbox-webpack-plugin": "4.2.0"
+    "workbox-webpack-plugin": "4.3.0"
   }
 }
