chore(client): update dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -21,27 +21,27 @@
     "@lingui/react": "2.7.4",
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
-    "@sentry/browser": "5.0.5",
+    "@sentry/browser": "5.1.0",
     "@types/lingui__core": "2.7.0",
     "@types/lingui__macro": "2.7.3",
     "@types/lingui__react": "2.5.2",
-    "@types/react": "16.8.12",
-    "@types/react-dom": "16.8.3",
-    "@types/react-redux": "7.0.6",
-    "@types/react-router-dom": "4.3.1",
+    "@types/react": "16.8.14",
+    "@types/react-dom": "16.8.4",
+    "@types/react-redux": "7.0.8",
+    "@types/react-router-dom": "4.3.2",
     "@types/redux-actions": "2.6.0",
     "@types/redux-logger": "3.0.7",
-    "@types/styled-components": "4.1.12",
+    "@types/styled-components": "4.1.14",
     "axios": "0.18.0",
-    "connected-react-router": "6.3.2",
-    "core-js": "3.0.0",
+    "connected-react-router": "6.4.0",
+    "core-js": "3.0.1",
     "history": "4.9.0",
     "query-string": "6.4.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-hot-loader": "4.8.2",
-    "react-redux": "7.0.0-beta.0",
-    "react-router-dom": "4.3.1",
+    "react-hot-loader": "4.8.4",
+    "react-redux": "7.0.2",
+    "react-router-dom": "5.0.0",
     "redux": "4.0.1",
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
